compiler-project/tests/lexer/invalid/test_single_ampersand.src
fn main() {
    bool b = (x & y);  // & without second &
    return 0;
}